build auth html template

--- a/frontend/auth/login.html
+++ b/frontend/auth/login.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Blog Admin Login</title>
+    <title>Admin Login - sBlog</title>
     <!-- CSS files -->
     
     <link rel="stylesheet" href="https://unpkg.com/@tabler/core@latest/dist/css/tabler.min.css">
